--- a/website/src/main/resources/public/index.html
+++ b/website/src/main/resources/public/index.html
@@ -1,12 +1,214 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Together Java</title>
+	<title>Together Java - Learn Java, together</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
 </head>
-<body>
-<h1>Hello from Together Java</h1>
-Visit us at: <a href="https://discord.gg/P3UmanFmvK">discord.gg/P3UmanFmvK</a>
+
+<body class="is-preload">
+
+	<!-- Sidebar -->
+	<section id="sidebar">
+		<div class="inner">
+			<nav>
+				<ul>
+					<li><a href="#intro">Welcome</a></li>
+					<li><a href="#one">Community</a></li>
+					<li><a href="#two">Partners</a></li>
+					<li><a href="#three">Contact</a></li>
+				</ul>
+			</nav>
+		</div>
+	</section>
+
+	<!-- Wrapper -->
+	<div id="wrapper">
+
+		<!-- Intro -->
+		<section id="intro" class="wrapper style1 fullscreen fade-up">
+			<div class="inner">
+				<h1><span class="image right"><img style="width: 50%" src="images/logo_frame.png"
+							alt="" /></span>Together Java</h1>
+				<p>Need Java help? We got plenty!<br>
+					Lots of friendly volunteers to help you learn Java or chat about everyday things.</p>
+				<ul class="actions">
+					<li><a href="https://discord.gg/P3UmanFmvK" class="button primary icon solid brands fa-discord">
+							Join us</a></li>
+				</ul>
+				<p><small>
+						<ul>
+							<li>20.000 members</li>
+							<li>300 questions answered weekly</li>
+							<li>50.000 messages per month</li>
+							<li>monthly giveaways</li>
+						</ul>
+					</small></p>
+			</div>
+		</section>
+
+		<!-- One -->
+		<section id="one" class="wrapper style2 spotlights">
+			<section>
+				<span class="image"><img src="images/questions.png" alt="" data-position="left top" /></span>
+				<div class="content">
+					<div class="inner">
+						<h2>You need help or have a question? <img src="images/peepo_happy.png" alt="" width="70" />
+						</h2>
+						<p>We have a sophisticated Q&A system with over 20 categories to choose from.</p>
+						<p>After posting your question, our experts will be with you shortly and provide assistance.</p>
+					</div>
+				</div>
+			</section>
+			<section>
+				<span class="image"><img src="images/cv_example.png" alt="" data-position="left top" /></span>
+				<div class="content">
+					<div class="inner">
+						<h2>We help you land a job! <img src="images/peepo_heart.png" alt="" width="70" /></h2>
+						<p>Our community consists of a lot of people who work with Java in their day-to-day business.
+						</p>
+						<p>Have a chat with them, we can provide you with all the advice you need for
+							your own professional career as a programmer.</p>
+					</div>
+				</div>
+			</section>
+			<section>
+				<span class="image"><img src="images/tj_bot.png" alt="" data-position="left top" /></span>
+				<div class="content">
+					<div class="inner">
+						<h2>Code together <img src="images/peepo_fancy.png" alt="" width="70" /></h2>
+						<p>Collaborate to our community bot and gain practice experience on a real project.</p>
+						<p>The project is big, sophisticated and most importantly beginner friendly with lots of guides.
+						</p>
+						<ul class="actions">
+							<li><a href="https://github.com/Together-Java/TJ-Bot"
+									class="button icon solid brands fa-github">TJ-Bot on GitHub</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+		</section>
+
+		<!-- Two -->
+		<section id="two" class="wrapper style3 fade-up">
+			<div class="inner">
+				<h2>Our partnerships</h2>
+				<p>Our community is always seeking out for exciting opportunities to partner up with amazing people and
+					organizations.
+					Through partnerships we enrich the experience for our users by providing licenses to much needed
+					products, hosting entertaining events and giving informative talks.
+				</p>
+				<div class="features">
+					<section>
+						<span class="icon solid image"><img src="images/jebtrains.png" alt="" width="70" /></span>
+						<h3><a href="https://www.jetbrains.com">JetBrains</a></h3>
+						<p>We will frequently <b>give away licenses</b> to their products, such as <b>Intellij IDEA
+								Ultimate</b> <img src="images/intellij.png" alt="" width="30" /> on special occasions.
+						</p>
+						<p>For example as prize for winning a coding contest, or just to
+							thank you for your contribution to the community.</p>
+					</section>
+					<section>
+						<span class="icon solid image"><img src="images/cloub_builders_logo.png" alt=""
+								width="70" /></span>
+						<h3><a href="https://www.cloud-builders.tech">Cloud Builders</a></h3>
+						<p>Hosting free Java conferences with expert speakers and many exciting talks.</p>
+						<p>All profits go to Ukrainian charity funds <nobr>💙💛</nobr>.</p>
+					</section>
+					<section>
+						<span class="icon solid image"><img src="images/aoc.svg" alt="" width="70" /></span>
+						<h3><a href="https://adventofcode.com/">Advent of Code</a></h3>
+						<p>Each year in December, we host AoC within our community with private leaderboards.</p>
+						<p>Advent of Code is an Advent calendar of small programming puzzles for a variety of skill sets
+							and skill levels that can be solved in any programming language you like.</p>
+					</section>
+					<section>
+						<span class="icon solid image"><img src="images/mooc.png" alt="" width="70" /></span>
+						<h3><a href="https://java-programming.mooc.fi/">MOOC: Java Programming</a></h3>
+						<p>Hands down the best complete and free resource to learn Java.</p>
+						<p>This course is created by the University of Helsinki and they use it to teach their Students
+							programming. It comes with 14 weekly parts and exercises.</p>
+					</section>
+				</div>
+			</div>
+		</section>
+
+		<!-- Three -->
+		<section id="three" class="wrapper style1 fade-up">
+			<div class="inner">
+				<h2>Get in touch</h2>
+				<p>The fastest way to talk to us is by visiting our <a href="https://discord.gg/P3UmanFmvK"><span
+							class="icon brands fa-discord" /> Discord server</a>.<br>
+					Alternatively, just drop a message down below.</p>
+				<div class="split style1">
+					<section>
+						<form method="post" action="#">
+							<div class="fields">
+								<div class="field half">
+									<label for="name">Name</label>
+									<input type="text" name="name" id="name" />
+								</div>
+								<div class="field half">
+									<label for="email">Email</label>
+									<input type="text" name="email" id="email" />
+								</div>
+								<div class="field">
+									<label for="message">Message</label>
+									<textarea name="message" id="message" rows="5"></textarea>
+								</div>
+							</div>
+							<ul class="actions">
+								<li><a href="" class="button submit">Send Message</a></li>
+							</ul>
+						</form>
+					</section>
+					<section>
+						<ul class="contact">
+							<li>
+								<h3><span class="icon brands fa-discord" /></h3>
+								<span><a href="https://discord.gg/P3UmanFmvK">Community</a></span>
+							</li>
+							<li>
+								<h3><span class="icon brands fa-github" /></h3>
+								<span><a href="https://github.com/Together-Java">Projects</a></span>
+							</li>
+							<li>
+								<h3><span class="icon brands fa-reddit" /></h3>
+								<span><a href="https://www.reddit.com/r/Togetherjava/">r/togetherjava</a></span>
+							</li>
+						</ul>
+					</section>
+				</div>
+			</div>
+		</section>
+
+	</div>
+
+	<!-- Footer -->
+	<footer id="footer" class="wrapper style1-alt">
+		<div class="inner">
+			<ul class="menu">
+				<li>&copy; Together Java. All rights reserved.</li>
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				<li>We are not affiliated, associated, or endorsed with/by Discord or Oracle.</li>
+			</ul>
+		</div>
+	</footer>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
 </body>
+
 </html>
